SERVER-79599 don't auto-parameterize queries executed in classic engine