src/mongo/db/query/canonical_query.cpp
@@ -198,9 +198,9 @@ Status CanonicalQuery::init(boost::intrusive_ptr<ExpressionContext> expCtx,
     _pipeline = std::move(pipeline);
     _isCountLike = isCountLike;
 
-
-    // If caching is disabled, do not perform any autoparameterization.
-    if (!internalQueryDisablePlanCache.load()) {
+    // Perform auto-parameterization only if the query is SBE-compatible and caching is enabled.
+    if (expCtx->sbeCompatibility != SbeCompatibility::notCompatible &&
+        !internalQueryDisablePlanCache.load()) {
         const bool hasNoTextNodes =
             !QueryPlannerCommon::hasNode(_root.get(), MatchExpression::TEXT);
         if (hasNoTextNodes) {
